--- a/views/mochaSpecRunner.hbs
+++ b/views/mochaSpecRunner.hbs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/lib/coffeebreak/styles.css">
 
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
+  <script type="text/javascript" src="/lib/coffeebreak/coffeebreak.js"></script>
   <script type="text/javascript" src="/lib/coffeebreak/sockjs.min.js"></script>
   <script type="text/javascript" src="/lib/coffeebreak/socket.js"></script>
   <script type="text/javascript" src="/lib/sinon/sinon.js"></script>
