--- a/views/projectListing.hbs
+++ b/views/projectListing.hbs
@@ -3,13 +3,11 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="/lib/coffeebreak/styles.css">
+	<script type="text/javascript" src="/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="/lib/coffeebreak/coffeebreak.js"></script>
 </head>
 <body>
-<div class="projectsListing">
-	<h1>Projects:</h1>
-	{{#each projects}}
-		<a href="/projects/{{project}}/SpecRunner.html">{{project}}</a>
-	{{/each}}
-</div>
+<header id="coffeeBreakHeader"></header>
+
 </body>
 </html>
